# flask-course-2

./: Makefile  config.py  pyproject.toml
flask_course_2/: __init__.py  app.py  inserts.py  models.py  routes.py
flask_course_2/database/: inserts.py  models.py  queries.py
flask_course_2/resources/: actors.py  aggregations.py  films.py
flask_course_2/schemas/: actors.py  films.py
flask_course_2/templates/: index.html
migrations/versions/: 1c6974c1c943_add_film_model.py  37a30950b118_add_film_model.py  5ab51840442f_add_film_model.py  5f2c2e39bdbd_add_film_model.py  6132e8631398_add_film_model.py  b36314711e82_add_film_model.py  ea382edb164a_add_film_model.py
