[tool.poetry]
name = "flask-course-2"
version = "0.1.0"
description = ""
authors = ["bloodywd <bloodyforreal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
flask = "^3.0.0"
flask-restful = "^0.3.10"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
flask-swagger-ui = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
